Fix horizontal scrolling

--- a/roosterapp/static/css/main.css
+++ b/roosterapp/static/css/main.css
@@ -1,11 +1,6 @@
 @import 'https://fonts.googleapis.com/css?family=Open+Sans';
 
 .content {
-    position: absolute;
-    margin:0;
-    left:50%;
-    margin-right:50%;
-    transform: translate(-50%, 0);
     min-width: 30em;
     text-align: center;
 }
